# geometric-certificates

./: README.md  pyproject.toml  requirements.txt
examples/: 2D_example.ipynb
src/convex_adversarial/: run.py  setup.py
src/convex_adversarial/convex_adversarial/: __init__.py  dual.py  dual_inputs.py  dual_layers.py  dual_network.py  utils.py
src/convex_adversarial/examples/: attacks.py  cifar.py  cifar_evaluate.py  fashion_mnist.py  har.py  mnist.py  mnist_epsilon.py  primal.py  problems.py  runtime.py  svhn.py  trainer.py
src/geocert/: __init__.py  _polytope_.py  domains.py  full_lp.py  geocert.py  geocert_batch.py  mip_verify.py  plnn.py  utilities.py
src/mister_ed/: adversarial_attacks.py  adversarial_evaluation.py  adversarial_perturbations.py  adversarial_training.py  bundled_attacks.py  config.py  loss_functions.py  main_sandbox.py  prebuilt_attacks.py  prebuilt_loss_functions.py  spatial_transformers.py  st_sandbox.py
src/mister_ed/bin-codes/: bin_codes.py
src/mister_ed/cifar10/: cifar_loader.py  cifar_resnets.py  wide_resnets.py
src/mister_ed/custom_lpips/: base_model.py  custom_dist_model.py
src/mister_ed/imagenet/: imagenet_loader.py
src/mister_ed/imagenet/examples/: imagenet_eval.py  imagenet_logits.py  visu_arch.py  voc2007_extract.py
src/mister_ed/imagenet/pretrainedmodels/: __init__.py  utils.py
src/mister_ed/imagenet/pretrainedmodels/datasets/: utils.py  voc.py
src/mister_ed/mnist/: mnist_loader.py
src/mister_ed/utils/: checkpoints.py  discretization.py  experiment_utils.py  image_utils.py  pytorch_ssim.py  pytorch_utils.py
(+19 files in other folders)
