[project]
name = "geometric-certificates"
version = "0.2"
authors = [
  { name="Matt Jordan" },
  { name="Justin Lewis" },
]
readme = "README.md"
license = {text = "MIT License"}
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/revbucket/geometric-certificates"
Issues = "https://github.com/revbucket/geometric-certificates/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"